--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ h1 {
   padding-bottom: 1.5rem;
 }
 
+fieldset {
+  padding: 1rem;
+}
+
 .todo-item {
   display: flex;
   padding-top: 1rem;
@@ -74,4 +78,13 @@ h1 {
 
 #saveAuthorSection {
   margin-bottom: 1rem;
+}
+
+#userNames {
+  padding: 0.2rem;
+  font-size: 1rem;
+  border: 1px solid var(--middleGreen-color);
+  background-color: var(--middleGreen-color);
+  color: white;
+  border-radius: 3px;
 }
